--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
   },
   "dependencies": {
     "@types/node": "14.14.29",
-    "pubhop": "^0.0.0-fa3ee9e5",
+    "pubhop": "^0.0.0-029c1406",
     "ts-node": "9.1.1",
-    "typescript": "4.1.5"
+    "typescript": "^5.0.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.6",
